--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>2.0.2-beta</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>name.falgout.jeffrey.testing.junit5</groupId>
+            <artifactId>mockito-extension</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
